--- a/thread/thread.vcxproj.filters
+++ b/thread/thread.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="WorkerThread.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DataManage.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CSingleton.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
